dodanie validacji zbioru produkcyjnego

--- a/data/tables/cluster_summaries/plotting_cluster_summaries.ipynb
+++ b/data/tables/cluster_summaries/plotting_cluster_summaries.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "856aa7a1",
+   "execution_count": 76,
+   "id": "c3f34d72",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f5101b3e880>"
+       "<matplotlib.legend.Legend at 0x7f5101b29a90>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -48,6 +48,7 @@
     "#     x1 = np.linspace(0, 1, len(df))\n",
     "    df = df.sort_values(by='a-distance').reset_index(drop=True)\n",
     "    plt.plot(df['a-distance'], label=particle_name)\n",
+    "#     plt.savefig('./a.png')\n",
     "    \n",
     "plt.legend(loc=2, prop={'size': 15})"
    ]
